--- a/configs/application.ini
+++ b/configs/application.ini
@@ -92,7 +92,7 @@ website.params.url = http://localhost/DotKernel
 database.params.host     = 127.0.0.1
 database.params.dbname   = dot_kernel
 database.params.username = root
-database.params.password = 1234
+database.params.password = "1234"
 database.params.profiler = TRUE
 
 phpSettings.display_errors = 1
